# dialogue-leveler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: LoudnessDetector.h
installer/: DialogueLeveler.iss
